# axiom

./: CMakeLists.txt  Makefile
axiom/cli/: SqlQueryRunner.cpp  SqlQueryRunner.h
axiom/common/: CMakeLists.txt  Session.cpp  Session.h
axiom/connectors/: CMakeLists.txt  ConnectorMetadata.cpp  ConnectorMetadata.h  ConnectorSession.h
axiom/connectors/hive/: CMakeLists.txt  HiveConnectorMetadata.cpp  HiveConnectorMetadata.h  LocalHiveConnectorMetadata.cpp  LocalHiveConnectorMetadata.h
axiom/connectors/hive/tests/: HiveConnectorMetadataTest.cpp  LocalHiveConnectorMetadataTest.cpp
axiom/connectors/tests/: CMakeLists.txt  TestConnector.cpp  TestConnector.h
axiom/connectors/tpch/: CMakeLists.txt  TpchConnectorMetadata.cpp  TpchConnectorMetadata.h
axiom/connectors/tpch/tests/: TpchConnectorMetadataTest.cpp
axiom/logical_plan/: CMakeLists.txt  Expr.h  ExprPrinter.cpp  ExprResolver.cpp  ExprResolver.h  LogicalPlanDotPrinter.cpp  LogicalPlanNode.cpp  LogicalPlanNode.h  NameMappings.h  PlanBuilder.cpp  PlanBuilder.h  PlanNodeVisitor.h  PlanPrinter.cpp  Utils.cpp  Utils.h
axiom/logical_plan/tests/: PlanPrinterTest.cpp
axiom/optimizer/: CMakeLists.txt  ConstantExprEvaluator.cpp  DerivedTable.cpp  DerivedTable.h  DerivedTableDotPrinter.cpp  DerivedTablePrinter.cpp  ExprsWrapper.cpp  ExprsWrapper.h  FunctionRegistry.h  JoinSample.cpp  Optimization.cpp  Optimization.h  OptimizerOptions.h  Plan.cpp  Plan.h  PlanObject.cpp  PlanObject.h  PlanUtils.cpp  PlanUtils.h  PrecomputeProjection.cpp  PrecomputeProjection.h  QueryGraph.cpp  QueryGraph.h  QueryGraphContext.cpp  QueryGraphContext.h  RelationOp.cpp  RelationOp.h  RelationOpPrinter.cpp  RelationOpVisitor.h  Schema.cpp  Schema.h  SchemaResolver.cpp  SchemaResolver.h  SubfieldTracker.cpp  SubfieldTracker.h  Subfields.cpp  ToGraph.cpp  ToGraph.h  ToVelox.cpp  ToVelox.h  (+1 more)
axiom/optimizer/connectors/: CMakeLists.txt  ConnectorMetadata.cpp  ConnectorMetadata.h
axiom/optimizer/connectors/hive/: HiveConnectorMetadata.cpp  HiveConnectorMetadata.h  LocalHiveConnectorMetadata.cpp  LocalHiveConnectorMetadata.h
axiom/optimizer/connectors/hive/tests/: HiveConnectorMetadataTest.cpp
axiom/optimizer/connectors/tests/: TestConnector.h
axiom/optimizer/connectors/tpch/: TpchConnectorMetadata.h
axiom/optimizer/tests/: AxiomSql.cpp  AxiomSqlBenchmark.cpp  CMakeLists.txt  DerivedTablePrinterTest.cpp  HiveAggregationQueriesTest.cpp  HiveCrossJoinQueriesTest.cpp  HiveQueriesTest.cpp  HiveWindowQueriesTest.cpp  JoinTest.cpp  PlanMatcher.cpp  PlanMatcher.h  PlanTest.cpp  PlanTest.h  PrecomputeProjectionTest.cpp  PrestoParserTest.cpp  QueryTestBase.cpp  QueryTestBase.h  RelationOpPrinterTest.cpp  SubfieldTest.cpp  SubqueryTest.cpp  SyntacticJoinOrderTest.cpp  TestConnectorQueryTest.cpp  TpchPlanTest.cpp  UnnestTest.cpp  VeloxSql.cpp  WritePartitionTest.cpp  WriteTest.cpp
axiom/optimizer/tests/tpch.plans/: q1.plans  q10.plans  q11.plans  q12.plans  q13.plans  q14.plans  q15.plans  q16.plans  q17.plans  q18.plans  q19.plans  q2.plans  q20.plans  q21.plans  q22.plans  q3.plans  q4.plans  q5.plans  q6.plans  q7.plans  q8.plans  q9.plans
axiom/optimizer/tests/utils/: DfFunctions.cpp
axiom/runner/: CMakeLists.txt  LocalRunner.cpp  LocalRunner.h  MultiFragmentPlan.h  Runner.cpp  Runner.h
axiom/runner/tests/: LocalRunnerTest.cpp  LocalRunnerTestBase.cpp  PrestoQueryReplayRunner.cpp
axiom/sql/presto/: PrestoParser.cpp
axiom/sql/presto/ast/: AstBuilder.cpp  AstNode.h  AstPrinter.cpp
axiom/sql/presto/grammar/: CMakeLists.txt
axiom/sql/presto/tests/: LogicalPlanMatcher.cpp  LogicalPlanMatcher.h  PrestoParserTest.cpp
axiom/utils/: EnumFormatter.h
